--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Android IMC Calculator</string>
+    <string name="app_name">IMC Calculator</string>
     <string name="name">Name:</string>
     <string name="age">Age:</string>
     <string name="weight">Weight (kg):</string>
