--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,21 @@
 <resources>
-    <string name="app_name">IMC Calculator</string>
+    <string name="app_name">BMI Calculator</string>
+
+    <!-- Main Activity (first screen) -->
     <string name="name">Name:</string>
     <string name="age">Age:</string>
     <string name="weight">Weight (kg):</string>
     <string name="height">Height (m):</string>
     <string name="nutriReport">Nutritional Report</string>
+
+    <!-- BMI result texts -->
+    <string name="underW">Underweight</string>
+    <string name="healthy">Healthy</string>
+    <string name="overW">Overweight</string>
+    <string name="obesityI">Class I obesity </string>
+    <string name="obesityII">Class II obesity (severe)</string>
+    <string name="obesityIII">Class III obesity (morbid)</string>
+
+
 
 </resources>
